Mon Mar  1 15:39:57 2004  Owen Taylor  <otaylor@redhat.com>

       Patch from J. Ali Harlow

	* configure.in: Use void * not HANDLE for GPid on win32.

	* glib/gspawn.[ch] glib/gspawn-win32.[ch] glib/glib.def: 
	Add g_spawn_close_pid().
	
	* glib/gspawn.[ch]: Make g_spawn functions take
	GPid * instead if int * (GPid == int on unix, will
	produce compile warnings until fixed on Win32.)

	* tests/child-test.c: Make the test a little more
	inappropriately verbose.

        * glib/gmain.c: Add some documentation warnings about
	not closing @pid while the source is active.

Mon Mar  1 20:32:06 2004  Tim Janik  <timj@gtk.org>

	* autogen.sh:
	- exit with $? instead of 1 in case of failure
	- exit with $? if ./configure failed
	  (that's so autogen.sh && make lines work)
	- removed --enable-gtk-doc option
	- added $AUTOGEN_CONFIGURE_ARGS

Mon Mar  1 09:17:32 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c (g_main_depth): Clarify doc comment.

2004-03-01  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gatomic.c: Define g_atomic_(int|pointer)_get only for
	G_ATOMIC_OP_MEMORY_BARRIER_NEEDED. Spotted by Hans Breuer.

Sun Feb 29 21:42:47 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c: Fix leftover references to 
	g_main_context_depth() in docs.

Sun Feb 29 21:34:34 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.[ch]: Add g_main_depth() (Request from
	Tim Janik and Stefan Westerfeld)

Mon Mar  1 00:26:11 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Update for 2.3.4

2003-02-29  Hans Breuer  <hans@breuer.org>

	* glib/gatomic.c : added win32 api based implementation
	for G_PLATFORM_WIN32, !__GNUC__

	* glb/glib.def : change to g_atomi_* no _fallback

2004-02-29  Sebastian Wilhelmi  <seppi@seppi.de>

	* configure.in, glib/gatomic.c, glib/gatomic.h: Moved the
	assembler functions from gatomic.h to gatomic.c, which makes for
	better maintainability. Also use gint instead of gint32 to be able
	to use reference counting for ABI-fixed structures with